--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,31 +48,31 @@
             <input class="form-check-input" type="checkbox" value="" id="loop"
                    [(ngModel)]="carouselConfig.loop">
             <label class="form-check-label" for="loop">
-              loop
+              Loop
             </label>
           </div>
           <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="autoLoop"
                    [(ngModel)]="carouselConfig.autoLoop">
             <label class="form-check-label" for="autoLoop">
-              autoLoop
+              Auto Loop
             </label>
           </div>
           <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="pauseOnHover"
                    [(ngModel)]="carouselConfig.pauseOnHover">
             <label class="form-check-label" for="pauseOnHover">
-              pauseOnHover
+              Pause On Hover
             </label>
           </div>
         </div>
         <div fxLayout="column" fxFlex="30">
           <div class="mb-3">
-            <label for="width" class="form-label">autoLoopTime</label>
+            <label for="width" class="form-label">Auto Loop Time</label>
             <input type="text"
                    [(ngModel)]="carouselConfig.autoLoopTime"
                    class="form-control"
-                   id="autoLoopTime" placeholder="autoLoopTime">
+                   id="autoLoopTime" placeholder="Auto Loop Time">
           </div>
         </div>
         <div fxLayout="column" fxFlex="30"></div>
@@ -87,7 +87,7 @@
             <input class="form-check-input" type="checkbox" value="" id="animation"
                    [(ngModel)]="carouselConfig.animation">
             <label class="form-check-label" for="animation">
-              animation
+              Animation
             </label>
           </div>
           <div class="form-check">
@@ -101,17 +101,17 @@
             <input class="form-check-input" type="checkbox" value="" id="allowButtonAnimation"
                    [(ngModel)]="carouselConfig.allowButtonAnimation">
             <label class="form-check-label" for="allowButtonAnimation">
-              allowButtonAnimation
+              Allow Button Animation
             </label>
           </div>
         </div>
         <div fxLayout="column" fxFlex="30">
           <div class="mb-3">
-            <label for="width" class="form-label">carouselAnimationClass</label>
+            <label for="width" class="form-label">Carousel Animation Class</label>
             <input type="text"
                    [(ngModel)]="carouselConfig.carouselAnimationClass"
                    class="form-control"
-                   id="carouselAnimationClass" placeholder="carouselAnimationClass">
+                   id="carouselAnimationClass" placeholder="Carousel Animation Class">
           </div>
         </div>
         <div fxLayout="column" fxFlex="30"></div>
@@ -125,75 +125,75 @@
               <input class="form-check-input" type="checkbox" value="" id="outsideButton"
                      [(ngModel)]="carouselConfig.outsideButton">
               <label class="form-check-label" for="outsideButton">
-                outsideButton
+                Outside Button
               </label>
             </div>
           </div>
         </div>
         <div fxLayout="column" fxFlex="30">
           <div class="mb-3">
-            <label for="width" class="form-label">previousButtonIconClass</label>
+            <label for="width" class="form-label">Previous Button Icon Class</label>
             <input type="text"
                    [(ngModel)]="carouselConfig.previousButtonIconClass"
                    class="form-control"
-                   id="previousButtonIconClass" placeholder="previousButtonIconClass">
+                   id="previousButtonIconClass" placeholder="Previous Button Icon Class">
           </div>
         </div>
         <div fxLayout="column" fxFlex="30">
           <div class="mb-3">
-            <label for="width" class="form-label">nextButtonIconClass</label>
+            <label for="width" class="form-label">Next Button Icon Class</label>
             <input type="text"
                    [(ngModel)]="carouselConfig.nextButtonIconClass"
                    class="form-control"
-                   id="nextButtonIconClass" placeholder="nextButtonIconClass">
+                   id="nextButtonIconClass" placeholder="Next Button Icon Class">
           </div>
         </div>
         <div fxLayout="column" fxFlex="30"></div>
         <div fxLayout="column" fxFlex="30">
           <div class="mb-3">
-            <label for="width" class="form-label">previousButtonClass</label>
+            <label for="width" class="form-label">Previous Button Class</label>
             <input type="text"
                    [(ngModel)]="carouselConfig.previousButtonClass"
                    class="form-control"
-                   id="previousButtonClass" placeholder="previousButtonClass">
+                   id="previousButtonClass" placeholder="Previous Button Class">
           </div>
         </div>
         <div fxLayout="column" fxFlex="30">
           <div class="mb-3">
-            <label for="width" class="form-label">nextButtonClass</label>
+            <label for="width" class="form-label">Next Button Class</label>
             <input type="text"
                    [(ngModel)]="carouselConfig.nextButtonClass"
                    class="form-control"
-                   id="nextButtonClass" placeholder="nextButtonClass">
+                   id="nextButtonClass" placeholder="Next Button Class">
           </div>
         </div>
         <div fxLayout="column" fxFlex="30"></div>
         <div fxLayout="column" fxFlex="30">
           <div class="mb-3">
-            <label for="width" class="form-label">buttonBg</label>
+            <label for="width" class="form-label">Buttons Background</label>
             <input type="text"
                    [(ngModel)]="carouselConfig.buttonBg"
                    class="form-control"
-                   id="buttonBg" placeholder="buttonBg">
+                   id="buttonBg" placeholder="Buttons Background"/>
           </div>
         </div>
         <div fxLayout="column" fxFlex="30">
           <div class="mb-3">
-            <label for="width" class="form-label">dotsBg</label>
+            <label for="width" class="form-label">Dots Background</label>
             <input type="text"
                    [(ngModel)]="carouselConfig.dotsBg"
                    class="form-control"
-                   id="dotsBg" placeholder="dotsBg">
+                   id="dotsBg" placeholder="Dots Background">
           </div>
         </div>
         <div fxLayout="column" fxFlex="30"></div>
         <div fxLayout="column" fxFlex="30">
           <div class="mb-3">
-            <label for="width" class="form-label">dotsClass</label>
+            <label for="width" class="form-label">Dots Class</label>
             <input type="text"
                    [(ngModel)]="carouselConfig.dotsClass"
                    class="form-control"
-                   id="dotsClass" placeholder="dotsClass">
+                   id="dotsClass" placeholder="Dots Class">
             <span class="hint">try "custom-dot"</span>
           </div>
         </div>
@@ -219,7 +219,7 @@
             <input class="form-check-input" type="checkbox" value="" id="useKeyboard"
                    [(ngModel)]="carouselConfig.useKeyboard">
             <label class="form-check-label" for="useKeyboard">
-              useKeyboard
+              Use Keyboard
             </label>
           </div>
         </div>
@@ -228,7 +228,7 @@
             <input class="form-check-input" type="checkbox" value="" id="useMouseWheel"
                    [(ngModel)]="carouselConfig.useMouseWheel">
             <label class="form-check-label" for="useMouseWheel">
-              useMouseWheel
+              Use Mouse Wheel
             </label>
           </div>
         </div>
@@ -237,7 +237,7 @@
             <input class="form-check-input" type="checkbox" value="" id="resetOnResize"
                    [(ngModel)]="carouselConfig.resetOnResize">
             <label class="form-check-label" for="resetOnResize">
-              resetOnResize
+              Reset On Resize
             </label>
           </div>
         </div>
@@ -246,9 +246,25 @@
             <input class="form-check-input" type="checkbox" value="" id="showDots"
                    [(ngModel)]="carouselConfig.showDots">
             <label class="form-check-label" for="showDots">
-              showDots
+              Show Dots
             </label>
           </div>
+        </div>
+        <div fxLayout="column" fxFlex="30">
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="showControls"
+                   [(ngModel)]="carouselConfig.showControls">
+            <label class="form-check-label" for="showControls">
+              Show Controls
+            </label>
+          </div>
+        </div>
+        <div fxLayout="column" fxFlex="30">
+          <label>Dots Type</label>
+          <select name="dots-type" [(ngModel)]="carouselConfig.dotsType">
+            <option value="dot">Dot</option>
+            <option value="box">Box</option>
+          </select>
         </div>
         <div fxLayout="column" fxFlex="30"></div>
         <div fxLayout="column" fxFlex="30"></div>
@@ -279,13 +295,13 @@
             <input class="form-check-input" type="checkbox" id="hideOverlay"
                    [(ngModel)]="carouselStepConfig.hideOverlay">
             <label class="form-check-label" for="hideOverlay">
-              hideOverlay
+              Hide Overlay
             </label>
           </div>
         </div>
         <div fxLayout="column" fxFlex="30">
           <div class="mb-3">
-            <label for="width" class="form-label">overlayColor</label>
+            <label for="width" class="form-label">Overlay Color</label>
             <input type="text"
                    [(ngModel)]="carouselStepConfig.overlayColor"
                    class="form-control"
@@ -322,29 +338,29 @@
         </div>
         <div fxLayout="column" fxFlex="30">
           <div class="mb-3">
-            <label class="form-label">bgColor</label>
+            <label class="form-label">Background Color</label>
             <input type="text"
                    [(ngModel)]="item.bgColor"
                    class="form-control"
-                   placeholder="bgColor">
+                   placeholder="Background Color">
           </div>
         </div>
         <div fxLayout="column" fxFlex="30">
           <div class="mb-3">
-            <label class="form-label">buttonBg</label>
+            <label class="form-label">Button Background</label>
             <input type="text"
                    [(ngModel)]="item.buttonBg"
                    class="form-control"
-                   placeholder="buttonBg">
+                   placeholder="Button Background">
           </div>
         </div>
         <div fxLayout="column" fxFlex="30">
           <div class="mb-3">
-            <label class="form-label">bgImage</label>
+            <label class="form-label">Background Image</label>
             <input type="text"
                    [(ngModel)]="item.bgImage"
                    class="form-control"
-                   placeholder="bgImage">
+                   placeholder="Background Image">
           </div>
         </div>
         <div fxLayout="column">
@@ -358,6 +374,26 @@
       </div>
     </accordion-group>
   </accordion>
+  <div fxLayout="row wrap" fxLayoutAlign="start center">
+    <div fxLayout="column" fxFlex="30">
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox"
+               [(ngModel)]="showCaptions">
+        <label class="form-check-label">
+          Show Captions
+        </label>
+      </div>
+    </div>
+    <div fxLayout="column" fxFlex="30">
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox"
+               [(ngModel)]="showContent">
+        <label class="form-check-label">
+          Show Content
+        </label>
+      </div>
+    </div>
+  </div>
 
   <div class="mt-4">
     <ngx-carousel
@@ -378,12 +414,14 @@
       [buttonBg]="carouselConfig.buttonBg"
       [dotsBg]="carouselConfig.dotsBg"
       [dotsClass]="carouselConfig.dotsClass"
+      [dotsType]="carouselConfig.dotsType"
       [hideOverFlow]="carouselConfig.hideOverFlow"
       [carouselAnimationClass]="carouselConfig.carouselAnimationClass"
       [useKeyboard]="carouselConfig.useKeyboard"
       [useMouseWheel]="carouselConfig.useMouseWheel"
       [pauseOnHover]="carouselConfig.pauseOnHover"
       [resetOnResize]="carouselConfig.resetOnResize"
+      [showControls]="carouselConfig.showControls"
       [stepBackgroundSize]="carouselConfig.stepBackgroundSize"
       (onContentInIt)="onEvent('onContentInIt')"
       (onStepChange)="onEvent('onStepChange', $event)">
@@ -396,20 +434,36 @@
                          [overlayColor]="carouselStepConfig.overlayColor"
                          [overlayOpacity]="carouselStepConfig.overlayOpacity"
                          [backgroundSize]="carouselStepConfig.backgroundSize">
-        <ng-template ngxCarouselStepContent>
-          <div class="step-content">
-            <img src="https://picsum.photos/id/1024/1280/720" alt="Image" width="200px">
-            <h1>Title - {{stepIndex + 1}}</h1>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-              industry's
-              standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
-              to
-              make
-              a type specimen book. It has survived not only five centuries, but also the leap into electronic
-              typesetting,
-              remaining essentially unchanged.</p>
-          </div>
-        </ng-template>
+        <ng-container *ngIf="showCaptions">
+          <ng-template ngxCarouselStepCaption>
+            <h1>Slide {{stepIndex + 1}} Caption</h1>
+            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+          </ng-template>
+        </ng-container>
+        <ng-container *ngIf="showContent">
+          <ng-template ngxCarouselStepContent>
+            <div class="step-content">
+              <img src="https://picsum.photos/id/1024/1280/720" alt="Image" width="200px">
+              <h1>Title - {{stepIndex + 1}}</h1>
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's
+                standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
+                to
+                make
+                a type specimen book. It has survived not only five centuries, but also the leap into electronic
+                typesetting,
+                remaining essentially unchanged. Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the
+                industry's
+                standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
+                to
+                make
+                a type specimen book. It has survived not only five centuries, but also the leap into electronic
+                typesetting,
+                remaining essentially unchanged.</p>
+            </div>
+          </ng-template>
+        </ng-container>
       </ngx-carousel-step>
     </ngx-carousel>
   </div>
