--- a/projects/ngx-carousel/src/lib/ngx-carousel/ngx-carousel.component.scss
+++ b/projects/ngx-carousel/src/lib/ngx-carousel/ngx-carousel.component.scss
@@ -1,3 +1,21 @@
+@mixin ngx-transition($transition...) {
+  @if length($transition) == 0 {
+    $transition: all .2s ease-in-out;
+  }
+
+  @if length($transition) > 1 {
+    @each $value in $transition {
+      @if $value == null or $value == none {
+        @warn "The keyword 'none' or 'null' must be used as a single argument.";
+      }
+    }
+  }
+
+  @if nth($transition, 1) != null {
+    transition: $transition;
+  }
+}
+
 .ngx-carousel {
   position: relative;
   margin: auto;
@@ -38,6 +56,16 @@
       margin: 0 auto;
       overflow: hidden;
       overflow-y: auto;
+      @include ngx-transition(transform 0.6s ease-in-out);
+    }
+
+    .ngx-carousel-step-caption {
+      position: absolute;
+      bottom: 50px;
+      left: 50%;
+      transform: translateX(-50%);
+      text-align: center;
+      @include ngx-transition(transform 0.6s ease-in-out);
     }
 
   }
@@ -52,7 +80,7 @@
       left: 0;
 
       &.allow-button-animation {
-        transition: left ease 0.5s;
+        @include ngx-transition(left ease 0.6s);
 
         &:hover {
           left: -2px;
@@ -64,7 +92,7 @@
       right: 0;
 
       &.allow-button-animation {
-        transition: right ease 0.5s;
+        @include ngx-transition(right ease 0.6s);
 
         &:hover {
           right: -2px;
@@ -77,7 +105,7 @@
       left: -15px;
 
       &.allow-button-animation {
-        transition: left ease 0.5s;
+        @include ngx-transition(left ease 0.6s);
 
         &:hover {
           left: -17px;
@@ -89,7 +117,7 @@
       right: -15px;
 
       &.allow-button-animation {
-        transition: right ease 0.5s;
+        @include ngx-transition(right ease 0.6s);
 
         &:hover {
           right: -17px;
@@ -117,7 +145,19 @@
       opacity: 0.5;
       border-radius: 50%;
       display: inline-block;
-      transition: background-color 0.6s ease;
+      @include ngx-transition(opacity .6s ease)
+    }
+
+
+    .ngx-carousel-indicator {
+      cursor: pointer;
+      height: 5px;
+      width: 30px;
+      margin: 0 4px;
+      opacity: 0.5;
+      border-radius: 5px;
+      display: inline-block;
+      @include ngx-transition(opacity .6s ease)
     }
 
     .active, .ngx-carousel-dot:hover {
