--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -429,6 +429,7 @@
                          [bgColor]="item.bgColor"
                          [buttonBg]="item.buttonBg"
                          [bgImage]="item.bgImage"
+                         [classes]="item.classes"
                          [animation]="carouselStepConfig.animation"
                          [hideOverlay]="carouselStepConfig.hideOverlay"
                          [overlayColor]="carouselStepConfig.overlayColor"
