--- a/projects/ngx-carousel/src/lib/ngx-carousel/ngx-carousel.component.html
+++ b/projects/ngx-carousel/src/lib/ngx-carousel/ngx-carousel.component.html
@@ -4,6 +4,9 @@
                 width: width
               }"
      [ngxCarouselKeyEvents]="useKeyboard"
+     [ngxCarouselMouseWheelEvents]="useMouseWheel"
+     (onMouseEnter)="onMouseEnter()"
+     (onMouseLeave)="onMouseLeave()"
      (right)="next()"
      (left)="previous()">
   <div *ngIf="stepList.length"
